--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.githubviewr">
+    package="com.example.mobileappkp">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,10 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GitHubViewr">
         <activity
-            android:name=".CommitsList"
+            android:name="com.example.mobileappkp.CommitsList"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.mobileappkp.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
