--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-simplexml:2.8.1'
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
     //RxJava2
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
